# server/ogen/oas_handlers_gen.go
@@ -16,6 +16,7 @@ import (
 
 	ht "github.com/ogen-go/ogen/http"
 	"github.com/ogen-go/ogen/middleware"
+	"github.com/ogen-go/ogen/ogenerrors"
 )
 
 // handleTodosGetRequest handles GET /todos operation.
@@ -59,8 +60,27 @@ func (s *Server) handleTodosGetRequest(args [0]string, argsEscaped bool, w http.
 			span.SetStatus(codes.Error, stage)
 			s.errors.Add(ctx, 1, metric.WithAttributeSet(labeler.AttributeSet()))
 		}
-		err error
+		err          error
+		opErrContext = ogenerrors.OperationContext{
+			Name: "TodosGet",
+			ID:   "",
+		}
 	)
+	request, close, err := s.decodeTodosGetRequest(r)
+	if err != nil {
+		err = &ogenerrors.DecodeRequestError{
+			OperationContext: opErrContext,
+			Err:              err,
+		}
+		defer recordError("DecodeRequest", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+	defer func() {
+		if err := close(); err != nil {
+			recordError("CloseRequest", err)
+		}
+	}()
 
 	var response []Todo
 	if m := s.cfg.Middleware; m != nil {
@@ -69,13 +89,13 @@ func (s *Server) handleTodosGetRequest(args [0]string, argsEscaped bool, w http.
 			OperationName:    "TodosGet",
 			OperationSummary: "Get all todo items",
 			OperationID:      "",
-			Body:             nil,
+			Body:             request,
 			Params:           middleware.Parameters{},
 			Raw:              r,
 		}
 
 		type (
-			Request  = struct{}
+			Request  = *TodoInput
 			Params   = struct{}
 			Response = []Todo
 		)
@@ -88,12 +108,12 @@ func (s *Server) handleTodosGetRequest(args [0]string, argsEscaped bool, w http.
 			mreq,
 			nil,
 			func(ctx context.Context, request Request, params Params) (response Response, err error) {
-				response, err = s.h.TodosGet(ctx)
+				response, err = s.h.TodosGet(ctx, request)
 				return response, err
 			},
 		)
 	} else {
-		response, err = s.h.TodosGet(ctx)
+		response, err = s.h.TodosGet(ctx, request)
 	}
 	if err != nil {
 		defer recordError("Internal", err)
